style: skip rest button no longer partially covered by navbar

--- a/src/components/Timer/Timer.scss
+++ b/src/components/Timer/Timer.scss
@@ -39,7 +39,7 @@
   }
   .skip-rest-btn {
     position: absolute;
-    bottom: calc(#{$navbar-height} + 3rem);
+    bottom: calc(#{$navbar-height} + 4rem);
     display: flex;
     justify-content: center;
     align-items: center;
